<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kyudong.netflixandroid.login.LoginActivity">

    <ImageView
        android:id="@+id/image_login_logo"
        android:src="@drawable/win"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edit_user_id"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_login_id_edit"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:paddingStart="14sp"
        android:paddingEnd="14sp"
        android:hint="@string/login_id_hint_edit"
        android:maxLength="15"
        android:maxLines="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_login_logo" />

    <EditText
        android:id="@+id/edit_user_pwd"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:background="@drawable/custom_login_id_edit"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:paddingStart="14sp"
        android:paddingEnd="14sp"
        android:hint="@string/login_pwd_hint_edit"
        android:maxLength="15"
        android:maxLines="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_id"/>

    <TextView
        android:id="@+id/text_find_id_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_find_id_pwd"
        android:textSize="13sp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_pwd"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up_text"
        android:textSize="13sp"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toRightOf="@id/text_find_id_pwd"
        app:layout_constraintTop_toBottomOf="@id/edit_user_pwd"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_social_login1"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/custom_login_btn_social_round"
        android:text="@string/login_social"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/text_find_id_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_social_login2"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/custom_login_btn_social_round"
        android:text="@string/login_social"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_social_login1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_normal_login"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:text="@string/login_normal_btn"
        android:textSize="24sp"
        android:background="@drawable/custom_login_btn_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
