<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kyudong.netflixandroid.signup.SignUpFirstActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_sign_up"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_back_btn"
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:background="@drawable/win"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="216dp"
                android:layout_height="24dp"
                android:layout_marginStart="39dp"
                android:text="@string/sign_up_toolbar"
                android:textColor="@color/black_87"
                android:textSize="19.5sp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/img_back_btn"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_sign_up_email"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:background="@drawable/custom_sign_up_id"
        android:layout_marginTop="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/sign_up_email"
        android:textColorHighlight="@color/black_60"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_sign_up_pwd"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:background="@drawable/custom_sign_up_id"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/sign_up_pwd"
        android:textColorHighlight="@color/black_60"
        android:textSize="16sp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_sign_up_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_pwd_rule"
        android:layout_width="312dp"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_sign_up_pwd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        android:text="@string/sign_up_pwd_rule"
        android:textSize="12sp"
        android:textColor="@color/black"/>
    
    <TextView
        android:id="@+id/text_tos"
        android:layout_width="53dp"
        android:layout_height="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginStart="100dp"
        app:layout_constraintTop_toBottomOf="@+id/text_pwd_rule"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/sign_up_tos"
        android:textSize="12sp"
        android:textColor="@color/black"/>
    
    <TextView
        android:id="@+id/text_agree"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_marginTop="34dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/text_pwd_rule"
        app:layout_constraintLeft_toRightOf="@+id/text_tos"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/sign_up_agree"
        android:textSize="12sp"
        android:textColor="@color/black_38"/>
    
    <CheckBox
        android:layout_width="30dp"
        android:layout_height="18dp"
        android:layout_marginTop="34dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/text_pwd_rule"
        app:layout_constraintLeft_toRightOf="@+id/text_agree"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_normal_sign_up"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/sign_up_next_btn"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:background="@drawable/custom_login_btn_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
