<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kyudong.netflixandroid.signup.SignUpSecondActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_sign_up_second"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_back_btn_second"
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:background="@drawable/win"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="216dp"
                android:layout_height="24dp"
                android:layout_marginStart="39dp"
                android:text="@string/sign_up_toolbar"
                android:textColor="@color/black_87"
                android:textSize="19.5sp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/img_back_btn_second"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/img_sign_up_profile"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/win"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_up_second"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_sign_up_nickname"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="41dp"
        android:background="@drawable/custom_sign_up_nickname"
        android:hint="@string/sign_up_nickname"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="15.6sp"
        android:textColor="@color/black_60"
        app:layout_constraintTop_toBottomOf="@+id/img_sign_up_profile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="312dp"
        android:layout_height="16dp"
        android:text="@string/sign_up_nickname_info"
        android:textSize="11.7sp"
        android:textColor="@color/black_60"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintTop_toBottomOf="@+id/edit_sign_up_nickname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn_second_next_sign_up"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/sign_up_next_btn"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:background="@drawable/custom_login_btn_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>
