<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="390dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txv_dialog_report"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/menu_report"
        android:gravity="center_vertical"
        android:textSize="19.5sp"
        android:textColor="@color/black_87">

    </TextView>

    <RadioGroup
        android:id="@+id/rg_report"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginStart="17dp"
        app:layout_constraintTop_toBottomOf="@+id/txv_dialog_report">

        <RadioButton
            android:id="@+id/rb_1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/menu_1"
            android:textSize="17sp"
            android:textColor="@color/black_87"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"/>

        <RadioButton
            android:id="@+id/rb_2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/menu_2"
            android:textSize="17sp"
            android:textColor="@color/black_87"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"/>

        <RadioButton
            android:id="@+id/rb_3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/menu_3"
            android:textSize="17sp"
            android:textColor="@color/black_87"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"/>

        <RadioButton
            android:id="@+id/rb_4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/menu_4"
            android:textSize="17sp"
            android:textColor="@color/black_87"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"/>

        <RadioButton
            android:id="@+id/rb_5"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/menu_5"
            android:textSize="17sp"
            android:textColor="@color/black_87"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"/>

    </RadioGroup>

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/cl_dialog_report_first"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--app:layout_constraintDimensionRatio="5:1"-->
        <!--android:paddingStart="20dp"-->
        <!--android:paddingEnd="20dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/txv_dialog_report"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent">-->

        <!--<RadioButton-->
            <!--android:id="@+id/rb_report_1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/menu_1"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/rb_report_1"-->
            <!--android:layout_marginStart="30dp"-->
            <!--android:textSize="17sp"-->
            <!--android:textColor="@color/black_87"/>-->

    <!--</android.support.constraint.ConstraintLayout>-->

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/cl_dialog_report_second"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:paddingStart="20dp"-->
        <!--android:paddingEnd="20dp"-->
        <!--app:layout_constraintDimensionRatio="5:1"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/cl_dialog_report_first"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent">-->

        <!--<RadioButton-->
            <!--android:id="@+id/rb_report_2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/menu_2"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/rb_report_2"-->
            <!--android:layout_marginStart="30dp"-->
            <!--android:textSize="17sp"-->
            <!--android:textColor="@color/black_87"/>-->

    <!--</android.support.constraint.ConstraintLayout>-->

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/cl_dialog_report_third"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:paddingStart="20dp"-->
        <!--android:paddingEnd="20dp"-->
        <!--app:layout_constraintDimensionRatio="5:1"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/cl_dialog_report_second"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent">-->

        <!--<RadioButton-->
            <!--android:id="@+id/rb_report_3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/menu_3"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/rb_report_3"-->
            <!--android:layout_marginStart="30dp"-->
            <!--android:textSize="17sp"-->
            <!--android:textColor="@color/black_87"/>-->

    <!--</android.support.constraint.ConstraintLayout>-->

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/cl_dialog_report_fourth"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:paddingStart="20dp"-->
        <!--android:paddingEnd="20dp"-->
        <!--app:layout_constraintDimensionRatio="5:1"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/cl_dialog_report_third"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent">-->

        <!--<RadioButton-->
            <!--android:id="@+id/rb_report_4"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/menu_4"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/rb_report_4"-->
            <!--android:layout_marginStart="30dp"-->
            <!--android:textSize="17sp"-->
            <!--android:textColor="@color/black_87"/>-->

    <!--</android.support.constraint.ConstraintLayout>-->

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/cl_dialog_report_fifth"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:paddingStart="20dp"-->
        <!--android:paddingEnd="20dp"-->
        <!--app:layout_constraintDimensionRatio="5:1"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/cl_dialog_report_fourth"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent">-->

        <!--<RadioButton-->
            <!--android:id="@+id/rb_report_5"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/menu_5"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/rb_report_5"-->
            <!--android:layout_marginStart="30dp"-->
            <!--android:textSize="17sp"-->
            <!--android:textColor="@color/black_87"/>-->

    <!--</android.support.constraint.ConstraintLayout>-->
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_navy_blue_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_report"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintTop_toBottomOf="@+id/rg_report"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/txv_dialog_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_dialog"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/txv_dialog_report_btn"
            android:layout_marginEnd="50dp"
            android:textSize="13.6sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txv_dialog_report_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_report"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="10dp"
            android:textSize="13.6sp"
            android:textColor="@color/black_38"/>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>